<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.group.jug</groupId>
    <artifactId>jug-quarkus</artifactId>
    <version>1.0.1-SNAPSHOT</version>

    <properties>
        <ignite.version>2.15.0-SNAPSHOT</ignite.version>
        <compiler-plugin.version>3.12.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.10.0</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.2.5</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.ignite</groupId>
            <artifactId>ignite-core</artifactId>
            <version>${ignite.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-config-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-container-image-docker</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.management/sun.management=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <systemPropertyVariables>
                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
                <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-17</quarkus.native.builder-image>
                <quarkus.native.additional-build-args>
                    --add-opens=java.base/jdk.internal.access=ALL-UNNAMED,
                    --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED,
                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED,
                    --add-opens=java.base/sun.util.calendar=ALL-UNNAMED,
                    --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED,
                    --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED,
                    --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED,
                    --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED,
                    --add-opens=java.base/java.io=ALL-UNNAMED,
                    --add-opens=java.base/java.nio=ALL-UNNAMED,
                    --add-opens=java.base/java.net=ALL-UNNAMED,
                    --add-opens=java.base/java.util=ALL-UNNAMED,
                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED,
                    --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED,
                    --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED,
                    --add-opens=java.base/java.lang=ALL-UNNAMED,
                    --add-opens=java.base/java.lang.invoke=ALL-UNNAMED,
                    --add-opens=java.base/java.math=ALL-UNNAMED,
                    --add-opens=java.sql/java.sql=ALL-UNNAMED,
                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED,
                    --add-opens=java.base/java.time=ALL-UNNAMED,
                    --add-opens=java.base/java.text=ALL-UNNAMED,
                    --add-opens=java.management/sun.management=ALL-UNNAMED,
                    --add-opens=java.desktop/java.awt.font=ALL-UNNAMED,
                    -H:ReflectionConfigurationResources=reflect-config.json,
                    -H:ResourceConfigurationFiles=resource-config.json,
                    --initialize-at-run-time=org.apache.ignite.internal.util.IgniteUtils\,org.apache.ignite.internal.binary.BinaryContext\,org.apache.ignite.internal.util.GridUnsafe\,org.apache.ignite.events.EventType\,org.apache.ignite.marshaller.MarshallerExclusions\,org.apache.ignite.internal.processors.query.QueryUtils\,org.apache.ignite.lang.IgniteUuid\,org.apache.ignite.internal.marshaller.optimized.OptimizedMarshallerUtils\,org.apache.ignite.marshaller.jdk.JdkMarshaller
                </quarkus.native.additional-build-args>
            </properties>
        </profile>
        <profile>
            <id>jitserver</id>
            <activation>
                <property>
                    <name>jitserver</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
        <profile>
            <id>trace</id>
            <activation>
                <property>
                    <name>trace</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.docker.dockerfile-jvm-path>src/main/docker/Dockerfile.tracer</quarkus.docker.dockerfile-jvm-path>
            </properties>
        </profile>
    </profiles>
</project>
